appId: by.batteryfly.ev_charging.dev
---
- stopApp: "com.android.chrome"
- launchApp:
    clearState: true

- extendedWaitUntil:
    visible: "Login"
    timeout: 15000
- waitForAnimationToEnd:
    timeout: 5000

- tapOn:
    point: 93%, 9%
- extendedWaitUntil:
    visible: "Welcome back!"
    timeout: 15000

- tapOn: ".*Google.*"

# TODO: подтвердить реальный текст/локатор подсказанного аккаунта в пикере
- extendedWaitUntil:
    visible: "${GOOGLE_TEST_EMAIL}"
    timeout: 15000
- tapOn: "${GOOGLE_TEST_EMAIL}"

- assertVisible: "lera\nWelcome"
