# Вход с неправильным паролем
appId: by.batteryfly.ev_charging.dev
tags:
  - regression
---

- stopApp: "com.android.chrome"

- launchApp:
    clearState: true

- extendedWaitUntil:
    visible: "Login"
    timeout: 15000
- waitForAnimationToEnd:
    timeout: 5000

- tapOn:
    point: 93%, 9%
- extendedWaitUntil:
    visible: "Welcome back!"
    timeout: 15000


- tapOn:
    id: "username"
- back
- tapOn:
    id: "username"
- inputText: "${EMAIL}"


- hideKeyboard
- tapOn:
    id: "password"
- inputText: "${INVALID_PASSWORD}"

- hideKeyboard

- tapOn:
    text: "Login"
    index: 1

- assertVisible: "Error"
- assertVisible: "Invalid username/password. If you have registered before, use password recovery"
