# Бронирование станции

appId: by.batteryfly.ev_charging.dev
tags:
  - regression
---
- runFlow:
    file: ../charging/setup_short_charging_session.yaml

- extendedWaitUntil:
    visible: ".*List.*"
    timeout: 30000
- waitForAnimationToEnd:
    timeout: 5000
- retry:
    maxRetries: 3
    commands:
      - extendedWaitUntil:
          visible: ".*List.*"
          timeout: 15000
      - tapOn:
          text: ".*List.*"
      - extendedWaitUntil:
          visible: ".*Гипермаркет Green.*"
          timeout: 15000
- tapOn:
    text: ".*Гипермаркет Green.*"
- extendedWaitUntil:
    visible: ".*CCS2.*"
    timeout: 10000
- tapOn:
    text: ".*CCS2.*"
- extendedWaitUntil:
    visible: "Next"
    timeout: 10000

- runFlow:
    file: ../charging/swipe_to_start_charging_mode.yaml
- assertVisible: ".*Full tank.*"

- runFlow:
    file: ../charging/swipe_charging_mode_forward.yaml
- runFlow:
    file: ../charging/swipe_charging_mode_forward.yaml
- runFlow:
    file: ../charging/swipe_charging_mode_forward.yaml
- assertVisible: ".*Book.*"

- tapOn:
    text: "Next"

- assertVisible: "Booking"
- assertVisible: "Mode"
- assertVisible:
    text: "Booking"
    index: 1

- tapOn: "Activate"

- assertVisible: "\\d{1,2}:\\d{2}\nBooked"

- tapOn: "\\d{1,2}:\\d{2}\nBooked"
- tapOn: "Cancel"
- tapOn: "Back"
- assertVisible: ".*Charging station.*"

- tapOn: "Set a route"
- tapOn: "Google Maps"
- tapOn: "Share"
- extendedWaitUntil:
    visible:
      id: "android:id/content_preview_text"
      text: "https://(goo\\.gl/maps|maps\\.app\\.goo\\.gl)/.+"
    timeout: 15000
- assertVisible:
    id: "android:id/content_preview_text"
    text: "https://(goo\\.gl/maps|maps\\.app\\.goo\\.gl)/.+"
- tapOn: "Recents"
- tapOn:
    id: "task_scene"
    index: 1
- tapOn: "Back"
- assertVisible: ".*Charging station.*"


- tapOn: "Cancel"
- tapOn: "Cancel booking"
- assertNotVisible: "\\d{1,2}:\\d{2}\nBooked"

- tapOn: "Recents"
- tapOn: "Close all"
