appId: by.batteryfly.ev_charging.dev
tags:
  - regression
---
- runFlow:
    file: ../../subflows/auth/login.yaml
- extendedWaitUntil:
    visible: ".*List.*"
    timeout: 30000
- waitForAnimationToEnd:
    timeout: 5000
- retry:
    maxRetries: 3
    commands:
      - extendedWaitUntil:
          visible: ".*List.*"
          timeout: 15000
      - tapOn:
          text: ".*List.*"
      - extendedWaitUntil:
          visible: ".*Гипермаркет Green.*"
          timeout: 15000
- tapOn:
    text: ".*Гипермаркет Green.*"
- extendedWaitUntil:
    visible: ".*CCS2.*"
    timeout: 10000
- tapOn:
    text: ".*CCS2.*"
- extendedWaitUntil:
    visible: "Next"
    timeout: 10000

- runFlow:
    file: swipe_to_start_charging_mode.yaml
- assertVisible: ".*Full tank.*"

- runFlow:
    file: swipe_charging_mode_forward.yaml
- runFlow:
    file: swipe_charging_mode_forward.yaml

- assertVisible: "BYN"
- assertVisible: "kW"

- tapOn: "0"
- inputText: "3"
- hideKeyboard

- runFlow:
    file: swipe_payment_to_start.yaml
- runFlow:
    file: swipe_payment_forward.yaml

- assertVisible: ".*0000.*"

- tapOn:
    text: "Next"
- extendedWaitUntil:
    visible: "Pay and charge"
    timeout: 10000
- tapOn:
    text: "Pay and charge"
- assertNotVisible: "Pay and charge"

- extendedWaitUntil:
    visible: ".*40.*%"
    timeout: 300000

- extendedWaitUntil:
    visible: ".*Stop.*"
    timeout: 10000
- tapOn:
    text: ".*Stop.*"
- extendedWaitUntil:
    visible: ".*Yes.*"
    timeout: 10000
- tapOn:
    text: ".*Yes.*"
- assertNotVisible: ".*Stop.*"

- extendedWaitUntil:
    visible: 'Completed in \d{1,2}:\d{2}'
    timeout: 60000
