# Отображение по умолчанию предыдущего способа оплаты
appId: by.batteryfly.ev_charging.dev
tags:
  - regression
---
- runFlow:
    file: 04_80_percent_card.yaml

- tapOn: "Cool"

- extendedWaitUntil:
    visible: ".*List.*"
    timeout: 30000
- waitForAnimationToEnd:
    timeout: 5000
- retry:
    maxRetries: 3
    commands:
      - extendedWaitUntil:
          visible: ".*List.*"
          timeout: 15000
      - tapOn:
          text: ".*List.*"
      - extendedWaitUntil:
          visible: ".*Гипермаркет Green.*"
          timeout: 15000
- tapOn:
    text: ".*Гипермаркет Green.*"
- extendedWaitUntil:
    visible: ".*CCS2.*"
    timeout: 10000
- tapOn:
    text: ".*CCS2.*"
- extendedWaitUntil:
    visible: "Next"
    timeout: 10000

- extendedWaitUntil:
    visible: '(My balance|•••• \d{4})'
    timeout: 15000

