# PDF чек

appId: by.batteryfly.ev_charging.dev
tags:
  - regression
---
- runFlow:
    file: ../../subflows/auth/login.yaml

- tapOn: "lera\nWelcome"

- tapOn: "Charging history"

- tapOn: "Transactions\nTab 2 of 2"

- tapOn:
    text: "[\\s\\S]*# \\d+[\\s\\S]*BYN[\\s\\S]*kW\\*h[\\s\\S]*min[\\s\\S]*\\d{2}\\.\\d{2}\\.\\d{4}[\\s\\S]*\\d{1,2}:\\d{2}"
    index: 0

- scrollUntilVisible:
    element: "PDF"
    direction: DOWN
    timeout: 10000

- tapOn: "PDF"

- assertVisible:
    id: "content_preview_file_layout"
