# Функциональность кнопки "Проложить маршрут" со станции
appId: by.batteryfly.ev_charging.dev
tags:
  - regression
---

- runFlow:
    file: ../../subflows/auth/login.yaml

- extendedWaitUntil:
    visible: ".*List.*"
    timeout: 30000
- waitForAnimationToEnd:
    timeout: 5000
- retry:
    maxRetries: 3
    commands:
      - extendedWaitUntil:
          visible: ".*List.*"
          timeout: 15000
      - tapOn:
          text: ".*List.*"
      - extendedWaitUntil:
          visible: ".*Гипермаркет Green.*"
          timeout: 15000

- tapOn:
    text: ".*Гипермаркет Green.*"

- tapOn: "Set a route"

- assertVisible: "Select navigator"

- tapOn: "Google Maps"

- extendedWaitUntil:
    visible: "Share"
    timeout: 15000
- tapOn: "Share"
- extendedWaitUntil:
    visible:
      id: "android:id/content_preview_text"
      text: "https://goo\\.gl/maps.*"
    timeout: 15000
- assertVisible:
    id: "android:id/content_preview_text"
    text: "https://goo\\.gl/maps.*"



