# Корректное отображение формы "О приложении"

appId: by.batteryfly.ev_charging.dev
tags:
  - regression
---
- runFlow:
    file: ../../subflows/auth/login.yaml

- tapOn: "lera\nWelcome"

- tapOn: "About the app and help"

- assertVisible: "About the app and help"
- assertVisible: "For any app-related issues or questions, please reach out to our support team"
- assertVisible: "Frequently asked questions"
- assertVisible: "support@batteryfly.by"
- assertVisible: "+37529 888-88-87"

