# Привязка и удаление карты 
appId: by.batteryfly.ev_charging.dev
tags:
  - regression
---

- runFlow:
    file: ../../subflows/auth/login.yaml

- tapOn: "lera\nWelcome"

- tapOn: ".*My balance.*"

- tapOn: "Add a card"

- extendedWaitUntil:
    visible: "Номер карты"
    timeout: 3000000

- tapOn: "Номер карты"
- inputText: "4200000000000000"
- hideKeyboard

- tapOn: "Срок действия"
- inputText: "12/30"
- hideKeyboard


- tapOn: "CVC"
- inputText: "123"
- hideKeyboard

- tapOn: "Имя и фамилия на карте"
- inputText: "asd asd"
- hideKeyboard

- tapOn: "Привязать карту"

- extendedWaitUntil:
    visible: ".*Одобрено"
    timeout: 60000

- tapOn: "Вернуться в магазин"

- assertVisible: "Bank card"
- assertVisible: "•••• 0000"

# отмена удаление карты
- tapOn:
    point: 79%,51%

- assertVisible: "Would you like to delete your payment card?"

- tapOn: "Cancel"

- assertVisible: "Bank card"
- assertVisible: "•••• 0000"

# удаление карты
- tapOn:
    point: 79%,51%

- assertVisible: "Would you like to delete your payment card?"

- tapOn: "Yes"

- assertVisible: "Add a card for payment"

# привязка если нет ни одной привязанной карты
- tapOn: "Add a card for payment"

- extendedWaitUntil:
    visible: "Номер карты"
    timeout: 1200000

- tapOn: "Номер карты"
- inputText: "4200000000000000"
- hideKeyboard

- tapOn: "Срок действия"
- inputText: "12/30"
- hideKeyboard


- tapOn: "CVC"
- inputText: "123"
- hideKeyboard

- tapOn: "Имя и фамилия на карте"
- inputText: "asd asd"
- hideKeyboard

- tapOn: "Привязать карту"

- extendedWaitUntil:
    visible: ".*Одобрено"
    timeout: 60000

- tapOn: "Вернуться в магазин"

- assertVisible: "Bank card"
- assertVisible: "•••• 0000"
