# Смена пароля
appId: by.batteryfly.ev_charging.dev
tags:
  - regression
---

- stopApp: "com.android.chrome"

- launchApp:
    clearState: true

- extendedWaitUntil:
    visible: "Login"
    timeout: 15000
- waitForAnimationToEnd:
    timeout: 5000

- tapOn:
    point: 93%, 9%
- extendedWaitUntil:
    visible: "Welcome back!"
    timeout: 15000


- tapOn:
    id: "username"
- back
- tapOn:
    id: "username"
- inputText: "${EMAIL}"


- hideKeyboard
- tapOn:
    id: "password"
- inputText: "${PASSWORD}"

- hideKeyboard

- tapOn:
    text: "Login"
    index: 1

- assertVisible: "lera\nWelcome"
- tapOn: "lera\nWelcome"

- tapOn:
    point: 13%,20%

- tapOn: "Change password"

- tapOn: "New password"

- inputText: "${NEW_PASSWORD}"
- hideKeyboard

- tapOn:
    text: "New password"
    index: 1
- inputText: "${NEW_PASSWORD}"
- hideKeyboard

- tapOn: "Edit"

- assertVisible: "Login"

- extendedWaitUntil:
    visible: "Login"
    timeout: 15000
- waitForAnimationToEnd:
    timeout: 5000

- tapOn:
    point: 93%, 9%
- extendedWaitUntil:
    visible: "Welcome back!"
    timeout: 15000


- tapOn:
    id: "username"
- back
- tapOn:
    id: "username"
- inputText: "${EMAIL}"


- hideKeyboard
- tapOn:
    id: "password"
- inputText: "${NEW_PASSWORD}"

- hideKeyboard

- tapOn:
    text: "Login"
    index: 1

- assertVisible: "lera\nWelcome"
- tapOn: "lera\nWelcome"

- tapOn:
    point: 13%,20%

- tapOn: "Change password"

- tapOn: "New password"

- inputText: "${PASSWORD}"
- hideKeyboard

- tapOn:
    text: "New password"
    index: 1
- inputText: "${PASSWORD}"
- hideKeyboard

- tapOn: "Edit"
