# Сменить фото

appId: by.batteryfly.ev_charging.dev
---

- runFlow:
    file: ../../subflows/auth/login.yaml

- tapOn: "lera\nWelcome"

- tapOn:
    point: 13%,20%

- tapOn: "Change photo"


