# Корректное отображение формы "Charging history"

appId: by.batteryfly.ev_charging.dev
tags:
  - regression
---
- runFlow:
    file: ../../subflows/auth/login.yaml

- tapOn: "lera\nWelcome"
- tapOn: "Charging history"

- assertVisible: "Charging history"

- assertVisible: "30 days"
- assertVisible: "3 months"
- assertVisible: "6 months"
- assertVisible: "Year"

- assertVisible: "Analytics\nTab 1 of 2"
- assertVisible: "Transactions\nTab 2 of 2"

- assertVisible: "Total"
- assertVisible: "Amount"
- assertVisible: "Charging time"
- assertVisible: "Charging power"

- assertVisible: '\d+\.\d{2} BYN'
- assertVisible: '\d+(\.\d+)? kWh'
- assertVisible: '\d+(\.\d+)? kW \(avg\)'
- assertVisible: ".*Amount, kWh.*"
